mysql/kubernetes/traefik/monitoring/alertmanager_web_ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-web
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`alertmanager.tagenal`)
      services:
        - namespace: monitoring
          name: alertmanager-main
          port: 9093
