mysql/kubernetes/traefik/monitoring/prometheus_web_ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-web
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.tagenal`)
      services:
        - namespace: monitoring
          name: prometheus-k8s
          port: 9090
